Fixes for autoconf on HPUX. Includes ANSI -Ae flag test for HPUX compiler and check for getspnam in -lsec. Jeremy.

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -20,7 +20,7 @@ srcdir=@srcdir@
 builddir=@builddir@
 SHELL=/bin/sh
 
-BASEDIR=$(prefix)
+BASEDIR= @prefix@
 BINDIR = @bindir@
 SBINDIR = @sbindir@
 LIBDIR = @libdir@
