smb.conf : explicitly state "printcap name=" and "security=" parameters idb.pl   : change default behaviour for installation of config files.

--- a/packaging/SGI/smb.conf
+++ b/packaging/SGI/smb.conf
@@ -22,6 +22,7 @@
 ; in the printcap file will not be visible to clients.
 ;
 ;   printcap name = /usr/samba/printcap
+   printcap name = lpstat
 ;
 ; If you are using Impressario 1.x then you'll want to use the
 ; sambalp script provided with this package.  It works around
@@ -59,7 +60,7 @@
    lock directory = /usr/samba/var/locks
    share modes = yes
 
-;   security = user
+   security = user
 
 ;  You need to test to see if this makes a difference on your system
    socket options = TCP_NODELAY
