--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -43,7 +43,7 @@ SMB_PASSWD_FILE = $(BASEDIR)/private/smbpasswd
 SMB_PASSGRP_FILE = $(BASEDIR)/private/smbpassgrp
 SMB_GROUP_FILE = $(BASEDIR)/private/smbgroup
 SMB_ALIAS_FILE = $(BASEDIR)/private/smbalias
-SMB_PASSWD_PROGRAM = $(BASEDIR)/bin/smbpasswd
+SMB_PASSWD_PROGRAM = $(BINDIR)/smbpasswd
 
 # This is where SWAT images and help files go
 SWATDIR = $(BASEDIR)/swat
@@ -72,7 +72,7 @@ PASSWD_FLAGS = \
 		-DSMB_PASSGRP_FILE=\"$(SMB_PASSGRP_FILE)\"       \
 		-DSMB_GROUP_FILE=\"$(SMB_GROUP_FILE)\"           \
 		-DSMB_ALIAS_FILE=\"$(SMB_ALIAS_FILE)\" 
-FLAGS1 = $(CFLAGS) -Iinclude -I$(srcdir)/include -I$(srcdir)/ubiqx -I$(srcdir)/smbwrapper -DSMBLOGFILE=\"$(SMBLOGFILE)\" -DNMBLOGFILE=\"$(NMBLOGFILE)\"
+FLAGS1 = $(CFLAGS) -Iinclude -I$(srcdir)/include -I$(srcdir)/ubiqx -I$(srcdir)/smbwrapper $(CPPFLAGS) -DSMBLOGFILE=\"$(SMBLOGFILE)\" -DNMBLOGFILE=\"$(NMBLOGFILE)\"
 FLAGS2 = -DCONFIGFILE=\"$(CONFIGFILE)\" -DLMHOSTSFILE=\"$(LMHOSTSFILE)\"  
 FLAGS3 = -DSWATDIR=\"$(SWATDIR)\" -DSBINDIR=\"$(SBINDIR)\" -DLOCKDIR=\"$(LOCKDIR)\" -DSMBRUN=\"$(SMBRUN)\" -DCODEPAGEDIR=\"$(CODEPAGEDIR)\"
 FLAGS4 = -DDRIVERFILE=\"$(DRIVERFILE)\" -DBINDIR=\"$(BINDIR)\"
