--- a/source3/include/config.h.in
+++ b/source3/include/config.h.in
@@ -140,6 +140,7 @@
 #undef KRB4_AUTH
 #undef SEEKDIR_RETURNS_VOID
 #undef HAVE_DIRENT_D_OFF
+#undef HAVE_GETSPNAM
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
