Makefile.in: Added passing of CPPFLAGS into Makefile. configure configure.in include/config.h.in: Fixes for AIX4.x. AIX *will not*                      enable large file support of *any* description unless                      either -D_LARGE_FILES or -D_LARGE_FILES_API are defined.                      I chose "-D_LARGE_FILES" as this leads to cleaner code...
Also fixed bug where getpwnam was listed as getpw(a)nam in configure.in.
Jeremy.

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -10,6 +10,7 @@ mandir=@mandir@
 LIBS=@LIBS@
 CC=@CC@
 CFLAGS=@CFLAGS@
+CPPFLAGS=@CPPFLAGS@
 LDFLAGS=@LDFLAGS@
 AWK=@AWK@
 
@@ -20,7 +21,7 @@ srcdir=@srcdir@
 builddir=@builddir@
 SHELL=/bin/sh
 
-BASEDIR=@prefix@
+BASEDIR= @prefix@
 BINDIR = @bindir@
 SBINDIR = @sbindir@
 LIBDIR = @libdir@
