--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -141,6 +141,8 @@
 #undef SEEKDIR_RETURNS_VOID
 #undef HAVE_DIRENT_D_OFF
 #undef HAVE_GETSPNAM
+#undef HAVE_BIGCRYPT
+#undef HAVE_GETPRPWNAM
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
@@ -795,6 +797,12 @@
 
 /* Define if you have the resolv library (-lresolv).  */
 #undef HAVE_LIBRESOLV
+
+/* Define if you have the sec library (-lsec).  */
+#undef HAVE_LIBSEC
+
+/* Define if you have the security library (-lsecurity).  */
+#undef HAVE_LIBSECURITY
 
 /* Define if you have the socket library (-lsocket).  */
 #undef HAVE_LIBSOCKET
