--- a/appl/ftp/Makefile.in
+++ b/appl/ftp/Makefile.in
@@ -11,7 +11,8 @@ SHELL		= /bin/sh
 CC 	= @CC@
 RANLIB 	= @RANLIB@
 DEFS 	= @DEFS@
-CFLAGS 	= @CFLAGS@
+CFLAGS 	= @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
 
