--- a/appl/ftp/common/Makefile.in
+++ b/appl/ftp/common/Makefile.in
@@ -10,7 +10,8 @@ CC 	= @CC@
 AR	= ar
 RANLIB 	= @RANLIB@
 DEFS 	= @DEFS@
-CFLAGS 	= @CFLAGS@
+CFLAGS 	= @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
 
