--- a/appl/ftp/ftpd/Makefile.in
+++ b/appl/ftp/ftpd/Makefile.in
@@ -14,7 +14,8 @@ CC 	= @CC@
 YACC	= @YACC@
 RANLIB 	= @RANLIB@
 DEFS 	= @DEFS@
-CFLAGS 	= @CFLAGS@
+CFLAGS 	= @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 LIBS	= @LIBS@
 LIB_DBM = @LIB_DBM@
