--- a/appl/kx/Makefile.in
+++ b/appl/kx/Makefile.in
@@ -12,7 +12,8 @@ CC = @CC@
 LINK = @LINK@
 AR = ar
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 CPPFLAGS= $(XINCS) 
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
