--- a/appl/otp/Makefile.in
+++ b/appl/otp/Makefile.in
@@ -10,7 +10,8 @@ CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
