--- a/appl/xnlock/Makefile.in
+++ b/appl/xnlock/Makefile.in
@@ -14,7 +14,8 @@ CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
 DEFS = @DEFS@ -DBINDIR='"$(bindir)"'
-CFLAGS = $(XINCS) @CFLAGS@
+CFLAGS = $(XINCS) @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 LIBS = $(XLIBS) @LIBS@
 INSTALL = @INSTALL@
