--- a/lib/com_err/Makefile.in
+++ b/lib/com_err/Makefile.in
@@ -13,7 +13,8 @@ AR = ar
 RANLIB = @RANLIB@
 LN_S = @LN_S@
 DEFS = @DEFS@ -DROKEN_RENAME
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 EXECSUFFIX=@EXECSUFFIX@
 
