--- a/lib/editline/Makefile.in
+++ b/lib/editline/Makefile.in
@@ -13,7 +13,8 @@ AR = ar
 LN_S = @LN_S@
 RANLIB = @RANLIB@
 DEFS = @DEFS@ -DROKEN_RENAME
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
 INSTALL_DATA	= @INSTALL_DATA@
