--- a/lib/sl/Makefile.in
+++ b/lib/sl/Makefile.in
@@ -15,7 +15,8 @@ AR = ar
 RANLIB = @RANLIB@
 LN_S = @LN_S@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ @WFLAGS@
+WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 YACC = @YACC@
 LEX = @LEX@
