--- a/appl/push/Makefile.in
+++ b/appl/push/Makefile.in
@@ -27,9 +27,11 @@ bindir = @bindir@
 transform=@program_transform_name@
 EXECSUFFIX=@EXECSUFFIX@
 
+bin_PROGRAMS		= pfrom
+
 libexec_PROGRAMS	= push$(EXECSUFFIX)
 
-PROGRAMS		= $(libexec_PROGRAMS)
+PROGRAMS		= $(libexec_PROGRAMS) $(bin_PROGRAMS)
 
 push_SOURCES		= push.c
 
@@ -45,12 +47,19 @@ all: $(PROGRAMS)
 	$(CC) -c $(DEFS) -I../../include -I$(srcdir) $(CFLAGS) $(CPPFLAGS) $<
 
 install: all
+	$(MKINSTALLDIRS) $(DESTDIR)$(bindir)
+	for x in $(bin_PROGRAMS); do \
+	  $(INSTALL_PROGRAM) $$x $(DESTDIR)$(bin)/`echo $$x | sed '$(transform)'`; \
+	done
 	$(MKINSTALLDIRS) $(DESTDIR)$(libexecdir)
 	for x in $(libexec_PROGRAMS); do \
 	  $(INSTALL_PROGRAM) $$x $(DESTDIR)$(libexecdir)/`echo $$x | sed '$(transform)'`; \
 	done
 
 uninstall:
+	for x in $(bin_PROGRAMS); do \
+	  rm -f $(DESTDIR)$(bindir)/`echo $$x | sed '$(transform)'`; \
+	done
 	for x in $(libexec_PROGRAMS); do \
 	  rm -f $(DESTDIR)$(libexecdir)/`echo $$x | sed '$(transform)'`; \
 	done
@@ -76,6 +85,10 @@ LIBROKEN=-L../../lib/roken -lroken
 
 push$(EXECSUFFIX): $(push_OBJECTS)
 	$(LINK) $(LD_FLAGS) $(LDFLAGS) -o $@ $(push_OBJECTS) $(KLIB) $(LIBROKEN) $(LIBS) $(LIBROKEN)
+
+pfrom: pfrom.in
+	sed -e "s!%bindir%!$(bindir)!" $(srcdir)/pfrom.in > $@
+	chmod +x $@
 
 $(OBJECTS): ../../include/config.h
 
