(install): fix typo
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5247 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.in
+++ b/appl/push/Makefile.in
@@ -49,7 +49,7 @@ all: $(PROGRAMS)
 install: all
 	$(MKINSTALLDIRS) $(DESTDIR)$(bindir)
 	for x in $(bin_PROGRAMS); do \
-	  $(INSTALL_PROGRAM) $$x $(DESTDIR)$(bin)/`echo $$x | sed '$(transform)'`; \
+	  $(INSTALL_PROGRAM) $$x $(DESTDIR)$(bindir)/`echo $$x | sed '$(transform)'`; \
 	done
 	$(MKINSTALLDIRS) $(DESTDIR)$(libexecdir)
 	for x in $(libexec_PROGRAMS); do \
