--- a/appl/push/pfrom.in
+++ b/appl/push/pfrom.in
@@ -1,7 +1,6 @@
 #!/bin/sh
 # $Id$
-bindir=%bindir%
-pdc_trams=`dirname $0`
-PATH=$pdc_trams:$bindir:$PATH
+libexecdir=%libexecdir%
+PATH=$libexecdir:$PATH
 export PATH
 push --from $*
