Added lib/doscalls.c : This file collects all the calls that use dos_to_unix() to map filenames before accessing the UNIX filesystem.
The other changes are to make the code that previously allways called
the ambiguous functions (such as file_size(), that internally called
dos_to_unix()) to be unambiguous.

For example: file_size() becomes "dos_file_size()", that calls
dos_to_unix(), and file_size(), that does not.

It is now very explicit when we are calling a dos mapping call
and when we are not.

Also added string_to_sid unsigned fix by adding the strtoul from libg++
code into lib/replace.c and testing for strtoul in configure.in.

Jeremy.

--- a/source/configure.in
+++ b/source/configure.in
@@ -185,7 +185,7 @@ if test x"$ac_cv_func_connect" = x"no"; then
 fi
 
 
-AC_CHECK_FUNCS(waitpid getcwd strdup strerror chown chmod chroot)
+AC_CHECK_FUNCS(waitpid getcwd strdup strtoul strerror chown chmod chroot)
 AC_CHECK_FUNCS(fstat strchr utime utimes getrlimit fsync execl bzero memset)
 AC_CHECK_FUNCS(memmove vsnprintf snprintf setsid glob strpbrk pipe crypt16 getauthuid)
 AC_CHECK_FUNCS(strftime sigprocmask sigblock sigaction innetgr setnetgrent getnetgrent endnetgrent)
