--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -90,8 +90,8 @@ QUOTAOBJS=@QUOTAOBJS@
 LIB_OBJ = lib/charcnv.o lib/charset.o lib/debug.o lib/fault.o \
           lib/getsmbpass.o lib/interface.o lib/kanji.o lib/md4.o \
           lib/membuffer.o lib/netmask.o lib/pidfile.o lib/replace.o \
-          lib/signal.o lib/slprintf.o lib/system.o lib/time.o lib/ufc.o \
-          lib/genrand.o lib/username.o lib/access.o lib/smbrun.o \
+          lib/signal.o lib/slprintf.o lib/system.o lib/doscalls.o lib/time.o \
+		  lib/ufc.o lib/genrand.o lib/username.o lib/access.o lib/smbrun.o \
 	  lib/bitmap.o lib/crc32.o lib/snprintf.o \
 		lib/util_str.o lib/util_sid.o \
 		lib/util_unistr.o lib/util_file.o \
