--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -99,8 +99,8 @@ QUOTAOBJS=@QUOTAOBJS@
 LIB_OBJ = lib/charcnv.o lib/charset.o lib/debug.o lib/fault.o \
           lib/getsmbpass.o lib/interface.o lib/kanji.o lib/md4.o \
           lib/membuffer.o lib/netmask.o lib/pidfile.o lib/replace.o \
-          lib/signal.o lib/slprintf.o lib/system.o lib/time.o lib/ufc.o \
-          lib/util.o lib/genrand.o lib/username.o \
+          lib/signal.o lib/slprintf.o lib/system.o lib/doscalls.o lib/time.o \
+		  lib/ufc.o lib/util.o lib/genrand.o lib/username.o \
 		lib/access.o lib/smbrun.o \
 	  lib/bitmap.o lib/crc32.o lib/util_sid.o lib/snprintf.o \
 		lib/util_str.o lib/util_unistr.o \
@@ -166,7 +166,7 @@ SMBD_OBJ1 = smbd/server.o smbd/files.o smbd/chgpasswd.o smbd/connection.o \
             smbd/message.o smbd/nttrans.o smbd/pipes.o smbd/predict.o \
             smbd/$(QUOTAOBJS) smbd/reply.o smbd/ssl.o smbd/trans2.o smbd/uid.o \
 	    smbd/dosmode.o smbd/filename.o smbd/open.o smbd/close.o smbd/blocking.o \
-	    smbd/process.o smbd/oplock.o smbd/service.o smbd/error.o \
+	    smbd/process.o smbd/oplock.o smbd/service.o smbd/error.o
 
 PRINTING_OBJ = printing/pcap.o printing/print_svid.o printing/printing.o
 
@@ -316,8 +316,8 @@ MAKEDIR = || exec false; \
 @MAINT@	      $(MAKEDIR); fi; rm -f .deps/$@ .deps/$@d
 	@echo Compiling $*.c
 	@$(CC) -I. -I$(srcdir) $(FLAGS) -c $< \
-	  -o $@ @MAINT@ -Wp,-MD,.deps/$@ && \
-@MAINT@	sed 's|^'`echo $@ | sed 's,.*/,,'`':|$@:|' \
+	  -o $@ @MAINT@ -Wp,-MD,.deps/$@
+@MAINT@	@sed 's|^'`echo $@ | sed 's,.*/,,'`':|$@:|' \
 @MAINT@	  <.deps/$@ >.deps/$@d && \
 @MAINT@	rm -f .deps/$@ && : >.deps/.stamp
 
@@ -329,8 +329,8 @@ MAKEDIR = || exec false; \
 @MAINT@	      $(MAKEDIR); fi; rm -f .deps/$@ .deps/$@d
 	@echo Compiling $*.c with @PICFLAG@
 	@$(CC) -I. -I$(srcdir) $(FLAGS) @PICFLAG@ -c $< \
-	  -o $*.po.o @MAINT@ -Wp,-MD,.deps/$@ && \
-@MAINT@	sed 's|^'`echo $*\.po\.o | sed 's,.*/,,'`':|$@:|' \
+	  -o $*.po.o @MAINT@ -Wp,-MD,.deps/$@
+@MAINT@	@sed 's|^'`echo $*\.po\.o | sed 's,.*/,,'`':|$@:|' \
 @MAINT@	  <.deps/$@ >.deps/$@d && \
 @MAINT@	rm -f .deps/$@ && : >.deps/.stamp
 	@mv $*.po.o $@
@@ -344,8 +344,8 @@ MAKEDIR = || exec false; \
 @MAINT@	      $(MAKEDIR); fi; rm -f .deps/$@ .deps/$@d
 	@echo Compiling $*.c with @PICFLAG@ and -32
 	@$(CC) -32 -I. -I$(srcdir) $(FLAGS) @PICFLAG@ -c $< \
-	  -o $*.po32.o @MAINT@ -Wp,-MD,.deps/$@ && \
-@MAINT@	sed 's|^'`echo $*.po32.o | sed 's,.*/,,'`':|$@:|' \
+	  -o $*.po32.o @MAINT@ -Wp,-MD,.deps/$@
+@MAINT@	@sed 's|^'`echo $*.po32.o | sed 's,.*/,,'`':|$@:|' \
 @MAINT@	  <.deps/$@ >.deps/$@d && \
 @MAINT@	rm -f .deps/$@ && : >.deps/.stamp
 	@mv $*.po32.o $@
